<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.kuzer200.ense471_lab6.MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:gravity="end"
            android:textSize="40sp"
            android:text=""
            android:id="@+id/calculatorText"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:onClick="enterCharacter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_clear"
                android:id="@+id/btnClear"
                android:layout_weight="1"/>

            <Button
                android:onClick="enterCharacter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_leftBracket"
                android:id="@+id/btnLeftBracket"
                android:layout_weight="1"/>

            <Button
                android:onClick="enterCharacter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_rightBracket"
                android:id="@+id/btnRightBracket"
                android:layout_weight="1"/>

            <Button
                android:onClick="enterCharacter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_back"
                android:id="@+id/btnBack"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:onClick="enterCharacter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_7"
                android:id="@+id/btnSeven"
                android:layout_weight="1"/>

            <Button
                android:onClick="enterCharacter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_8"
                android:id="@+id/btnEight"
                android:layout_weight="1"/>

            <Button
                android:onClick="enterCharacter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_9"
                android:id="@+id/btnNine"
                android:layout_weight="1"/>

            <Button
                android:onClick="enterCharacter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_plus"
                android:id="@+id/btnPlus"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:onClick="enterCharacter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_4"
                android:id="@+id/btnFour"
                android:layout_weight="1"/>

            <Button
                android:onClick="enterCharacter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_5"
                android:id="@+id/btnFive"
                android:layout_weight="1"/>

            <Button
                android:onClick="enterCharacter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_6"
                android:id="@+id/btnSix"
                android:layout_weight="1"/>

            <Button
                android:onClick="enterCharacter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_minus"
                android:id="@+id/btnMinus"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:onClick="enterCharacter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1"
                android:id="@+id/btnOne"
                android:layout_weight="1"/>

            <Button
                android:onClick="enterCharacter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2"
                android:id="@+id/btnTwo"
                android:layout_weight="1"/>

            <Button
                android:onClick="enterCharacter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_3"
                android:id="@+id/btnThree"
                android:layout_weight="1"/>

            <Button
                android:onClick="enterCharacter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_multiply"
                android:id="@+id/btnMultiply"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:onClick="enterCharacter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:id="@+id/btnZero"
                android:layout_weight="1"/>

            <Button
                android:onClick="enterCharacter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_dot"
                android:id="@+id/btnDot"
                android:layout_weight="1"/>

            <Button
                android:onClick="enterCharacter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_equals"
                android:id="@+id/btnEquals"
                android:layout_weight="1"/>

            <Button
                android:onClick="enterCharacter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_divide"
                android:id="@+id/btnDivide"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
